--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
     <header>
       <div class="container">
         <h1>Arhicon</h1>
-        <div class="hamburger" id="hamburger" onclick="toggleMenu()">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-        <nav>
-          <ul id="nav-menu">
-            <li><a href="#home">Početna</a></li>
-            <li><a href="#about">O Nama</a></li>
-            <li><a href="#services">Usluge</a></li>
-            <li><a href="#projects">Projekti</a></li>
-            <li><a href="#contact">Kontakt</a></li>
-          </ul>
-        </nav>
+        <label class="hamburger-menu">
+          <input type="checkbox" />
+        </label>
+        <aside class="sidebar">
+          <nav>
+            <div><a href="#home">Početna</a></div>
+            <div><a href="#about">O nama</a></div>
+            <div><a href="#services">Usluge</a></div>
+            <div><a href="#projects">Projekti</a></div>
+            <div><a href="#contact">Kontakt</a></div>
+          </nav>
+        </aside>
       </div>
     </header>
 
@@ -135,7 +133,7 @@
     <script>
       function toggleMenu() {
         const navMenu = document.getElementById("nav-menu");
-        navMenu.classList.toggle("active");
+        navMenu.classList.toggle("active"); // Toggles the active class
       }
     </script>
   </body>
