--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Arhicon - Vrata i Prozori</title>
+    <title>Archicon - Vrata i Prozori</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <div class="container">
-        <h1>Arhicon</h1>
+        <h1>Archicon</h1>
         <label class="hamburger-menu">
           <input type="checkbox" />
         </label>
@@ -36,9 +36,9 @@
 
     <section id="about">
       <div class="container">
-        <h2>O Arhiconu</h2>
+        <h2>O Archiconu</h2>
         <p>
-          Arhicon je vodeći pružatelj visokokvalitetnih vrata i prozora, nudeći
+          Archicon je vodeći pružatelj visokokvalitetnih vrata i prozora, nudeći
           širok raspon modernih i tradicionalnih dizajna. Naša misija je unijeti
           ljepotu, sigurnost i funkcionalnost u svaki dom i ured.
         </p>
@@ -125,8 +125,8 @@
     <footer id="contact">
       <div class="container">
         <h2>Kontaktirajte Nas</h2>
-        <p>Email: arhicon@gmail.com | Telefon: +385 91 326 4071</p>
-        <p>© 2024 Arhicon. Sva Prava Pridržana.</p>
+        <p>Email: archicon@gmail.com | Telefon: +385 91 326 4071</p>
+        <p>© 2024 Archicon. Sva Prava Pridržana.</p>
       </div>
     </footer>
 
