--- a/index.html
+++ b/index.html
@@ -9,22 +9,30 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <!-- <div class="container">
         <h1>Archicon</h1>
-        <label class="hamburger-menu">
-          <input type="checkbox" />
-        </label>
-        <aside class="sidebar">
-          <nav>
-            <div><a href="#home">Početna</a></div>
-            <div><a href="#about">O nama</a></div>
-            <div><a href="#services">Usluge</a></div>
-            <div><a href="#projects">Projekti</a></div>
-            <div><a href="#contact">Kontakt</a></div>
-          </nav>
-        </aside>
-      </div>
+          </div> -->
+      <div class="image-container">
+        <img
+          src="images/archicon_logo.jpg"
+          alt="Projekt 4"
+          class="responsive-image"
+        />
+        <div class="main-title">
+          RCHICON
+          <div class="tagline">OUR SKETCHING YOUR REALITY</div>
+          <div class="subtext">WINDOW CRAFTERS AND DOOR MASTERS</div>
+        </div>
     </header>
+    <nav>
+      <ul id="nav-menu">
+          <li><a href="#home">Početna</a></li>
+          <li><a href="#about">O Nama</a></li>
+          <li><a href="#services">Usluge</a></li>
+          <li><a href="#projects">Projekti</a></li>
+          <li><a href="#contact">Kontakt</a></li>
+      </ul>
+  </nav>
 
     <section id="home" class="hero-section">
       <div class="container">
@@ -38,9 +46,27 @@
       <div class="container">
         <h2>O Archiconu</h2>
         <p>
-          Archicon je vodeći pružatelj visokokvalitetnih vrata i prozora, nudeći
-          širok raspon modernih i tradicionalnih dizajna. Naša misija je unijeti
-          ljepotu, sigurnost i funkcionalnost u svaki dom i ured.
+          Dobrodošli u Archicon, pravo rješenje za ugradnju prozora i vrata.
+          Naša firma se ponosi pružanjem vrhunskih proizvoda i usluga koje
+          zadovoljavaju najviše standarde kvaliteta i estetike. U Archiconu
+          vjerujemo da su prozori i vrata ključni elementi svakog doma i
+          poslovnog prostora.
+        </p>
+        <br />
+        <p>
+          Naš tim stručnjaka stvara rješenja koja ne samo da poboljšavaju
+          funkcionalnost, već i doprinose vizualnom identitetu vašeg prostora.
+          Radimo s pažnjom i predanošću, osiguravajući da svaki projekt bude
+          realiziran uredno i profesionalno. Klijentima pružamo ne samo
+          proizvode, već i cjelovito iskustvo koje uključuje konzultacije,
+          savjete i podršku kroz cijeli proces.
+        </p>
+        <br />
+        <p>
+          Od prvobitne ideje do završnog rezultata, trudimo se da svaki detalj
+          bude besprijekoran. Izaberite Archicon i uvjerite se u našu predanost
+          kvaliteti, estetici i zadovoljstvu klijenata. Vaš dom zaslužuje
+          najbolje!
         </p>
       </div>
     </section>
@@ -125,7 +151,7 @@
     <footer id="contact">
       <div class="container">
         <h2>Kontaktirajte Nas</h2>
-        <p>Email: archicon@gmail.com | Telefon: +385 91 326 4071</p>
+        <p>Email: archicon102@gmail.com | Telefon: +385 91 326 4071</p>
         <p>© 2024 Archicon. Sva Prava Pridržana.</p>
       </div>
     </footer>
