--- a/index.html
+++ b/index.html
@@ -4,35 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Archicon - Vrata i Prozori</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <!-- <div class="container">
-        <h1>Archicon</h1>
-          </div> -->
-      <div class="image-container">
-        <img
-          src="images/archicon_logo.jpg"
-          alt="Projekt 4"
-          class="responsive-image"
-        />
-        <div class="main-title">
-          RCHICON
+      <div class="content-wrapper">
+        <div class="image-container">
+          <img
+            src="images\arhicon_logo_no_background.png"
+            alt="Projekt 4"
+            class="responsive-image"
+          />
+        </div>
+        <div class="logo-container">
+          <div class="main-title">RCHICON</div>
           <div class="tagline">OUR SKETCHING YOUR REALITY</div>
+          <div class="end">&</div>
           <div class="subtext">WINDOW CRAFTERS AND DOOR MASTERS</div>
         </div>
+      </div>
     </header>
     <nav>
       <ul id="nav-menu">
-          <li><a href="#home">Početna</a></li>
-          <li><a href="#about">O Nama</a></li>
-          <li><a href="#services">Usluge</a></li>
-          <li><a href="#projects">Projekti</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+        <li><a href="#home">Početna</a></li>
+        <li><a href="#about">O Nama</a></li>
+        <li><a href="#services">Usluge</a></li>
+        <li><a href="#projects">Projekti</a></li>
+        <li><a href="#contact">Kontakt</a></li>
       </ul>
-  </nav>
+    </nav>
 
     <section id="home" class="hero-section">
       <div class="container">
