--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <li><a href="#home">Početna</a></li>
         <li><a href="#about">O Nama</a></li>
         <li><a href="#services">Usluge</a></li>
-        <li><a href="#projects">Projekti</a></li>
+        <li><a href="#doors">Vrata</a></li>
+        <li><a href="#windows">Prozori</a></li>
         <li><a href="#contact">Kontakt</a></li>
       </ul>
     </nav>
@@ -80,74 +81,82 @@
       <div class="container">
         <h2>Naše Usluge</h2>
         <div class="service">
-          <h3>Prilagođena Vrata</h3>
+          <h3>Sobna vrata po mjeri</h3>
+          <p>Nudimo široki asortiman sobnih vrata po mjeri.</p>
+        </div>
+        <div class="service">
+          <h3>PVC i ALU stolarija</h3>
           <p>
-            Projektiramo i postavljamo prilagođena vrata prema vašim potrebama i
-            stilskim preferencijama.
+            Koristimo visokotehnološke prozore koji pružaju iznimnu energetsku
+            učinkovitost, izdržljivost i bezvremenski stil za svaki prostor.
           </p>
         </div>
         <div class="service">
-          <h3>Moderni Prozori</h3>
-          <p>
-            Naši moderni prozori pružaju energetsku učinkovitost, izdržljivost i
-            bezvremenski stil za svaki prostor.
-          </p>
-        </div>
-        <div class="service">
-          <h3>Instalacija i Održavanje</h3>
-          <p>
-            Pružamo profesionalne usluge instalacije i održavanja kako bismo
-            osigurali dugotrajne performanse.
-          </p>
+          <h3>Parketi, laminati i vinili</h3>
+          <p>Pružamo velik izbor podnih obloga svih vrsta.</p>
         </div>
       </div>
     </section>
 
-    <section id="projects">
+    <section id="doors">
       <div class="container">
-        <h2>Nedavni Projekti</h2>
-        <div class="projects-gallery">
-          <div class="project-item">
-            <img
-              src="images\WhatsApp Slika 2024-09-29 u 16.31.58_8fcc79b1.jpg"
-              alt="Projekt 1"
-            />
-            <h4>Luksuzna Drvena Vrata</h4>
+        <h2>Vrata</h2>
+        <div class="doors-gallery">
+          <div class="door-item">
+            <img src="images\vrata.jpg" alt="Projekt 1" />
           </div>
-          <div class="project-item">
-            <img
-              src="images\WhatsApp Slika 2024-09-29 u 16.31.58_288360a1.jpg"
-              alt="Projekt 2"
-            />
-            <h4>Moderni Stakleni Prozori</h4>
+          <div class="door-item">
+            <img src="images\vrata2.jpg" alt="Projekt 2" />
           </div>
-          <div class="project-item">
-            <img
-              src="images\WhatsApp Slika 2024-09-29 u 16.31.58_a439b6be.jpg"
-              alt="Projekt 3"
-            />
-            <h4>Čelična Sigurnosna Vrata</h4>
+          <div class="door-item">
+            <img src="images\vrata3.jpg" alt="Projekt 3" />
           </div>
-          <div class="project-item">
-            <img
-              src="images\WhatsApp Slika 2024-09-29 u 16.31.58_b124bd17.jpg"
-              alt="Projekt 4"
-            />
-            <h4>Elegantna Vrtna Vrata</h4>
+          <div class="door-item">
+            <img src="images\vrata4.jpg" alt="Projekt 4" />
           </div>
-          <div class="project-item">
-            <img
-              src="images\WhatsApp Slika 2024-09-29 u 16.31.58_c7e4b58d.jpg"
-              alt="Projekt 5"
-            />
-            <h4>Instalacija Uredskih Prozora</h4>
+          <div class="door-item">
+            <img src="images\vrata5.jpg" alt="Projekt 5" />
           </div>
-          <div class="project-item">
-            <img
-              src="images\WhatsApp Slika 2024-09-29 u 16.31.59_ef458d8c.jpg"
-              alt="Projekt 6"
-            />
-            <h4>Vrata s Dvostrukim Staklom</h4>
+          <div class="door-item">
+            <img src="images\vrata5.jpg" alt="Projekt 6" />
+          </div>
+          <div class="door-item">
+            <img src="images\vrata6.jpg" alt="Projekt 7" />
+          </div>
+          <div class="door-item">
+            <img src="images\vrata7.jpg" alt="Projekt 8" />
+          </div>
+          <div class="door-item">
+            <img src="images\vrata8.jpg" alt="Projekt 9" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="windows">
+      <div class="container">
+        <h2>Prozori</h2>
+        <div class="windows-gallery">
+          <div class="window-item">
+            <img src="images\prozori.jpg" alt="Projekt 1" />
+          </div>
+          <div class="window-item">
+            <img src="images\prozori2.jpg" alt="Projekt 2" />
+          </div>
+          <div class="window-item">
+            <img src="images\prozori3.jpg" alt="Projekt 3" />
+          </div>
+          <div class="window-item">
+            <img src="images\prozori4.jpg" alt="Projekt 4" />
+          </div>
+          <div class="window-item">
+            <img src="images\prozori5.jpg" alt="Projekt 5" />
+          </div>
+          <div class="window-item">
+            <img src="images\prozori6.jpg" alt="Projekt 6" />
+          </div>
+          <div class="window-item">
+            <img src="images\prozori7.jpg" alt="Projekt 7" />
           </div>
         </div>
       </div>
